hoan thanh withdrawal

--- a/user/index.html
+++ b/user/index.html
@@ -175,7 +175,7 @@
                 </li>
 
                 <li class="nav-item">
-                    <a href="#withdrawal" class="nav-link">
+                    <a href="withdrawal.html" class="nav-link">
                         <img src="../assets/user/image/icon/4.png" alt="Withdrawal">
                         <span class="menu-title">Withdrawal</span></a>
                 </li>
@@ -217,17 +217,16 @@
                             <div class="your_partners">
                                 <img src="../assets/user/image/icon/1a.png" alt="">
                                 <div class="info_status_partners">
-                                    <span class="">Your partner status:</span> 
-                                    <h3>Basic</h3>
+                                    <h3>Top Invenstor</h3>
                                 </div>
                                 <div class="box_balance shadown">
-                                    Total Deposit: <b>0.000 USD</b>
+                                    #1
                                 </div>
                                 <div class="box_balance shadown">
-                                    Total Deposit: <b>0.000 USD</b>
+                                    #2
                                 </div>
                                 <div class="box_balance shadown">
-                                    Total Deposit: <b>0.000 USD</b>
+                                    #3
                                 </div>
                             </div>
                         </div>
@@ -236,11 +235,10 @@
                             <div class="your_partners">
                                 <img src="../assets/user/image/icon/2a.png" alt="">
                                 <div class="info_status_partners">
-                                    <span class="">Your upline:</span>
-                                        <h3>You Are Leader</h3>
-                                    </div>
+                                    <h3>Top Counttries Investment</h3>
+                                </div>
                                 <div class="box_balance shadown">
-                                    Total Deposit: <b>0.000 USD</b>
+                                    #1
                                 </div>
                             </div>
                         </div>
