--- a/user/transactions.html
+++ b/user/transactions.html
@@ -175,7 +175,7 @@
                 </li>
 
                 <li class="nav-item">
-                    <a href="#withdrawal" class="nav-link">
+                    <a href="withdrawal.html" class="nav-link">
                         <img src="../assets/user/image/icon/4.png" alt="Withdrawal">
                         <span class="menu-title">Withdrawal</span></a>
                 </li>
