--- a/user/deposit.html
+++ b/user/deposit.html
@@ -231,7 +231,7 @@
                                         <input type="radio" id="pm_eth" name="payment_method" value="ETH" class="form-check-input"> <i class="input-helper"></i><i class="input-helper"></i>
                                         <i class="input-helper"></i>
                                     </label>
-                                </div> <img src="https://bigco.io/b_cdn/images/eth.png" alt="">
+                                </div> <img src="../assets/user/image/icon/eth.png" alt="">
                             </label>
                         </div>
                     </div>
