--- a/user/withdrawal.html
+++ b/user/withdrawal.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="csrf-token" content="TIHgKf3jf9Am2po0eO2Nk5yHhTigbuTUVGLNgmhA">
 
-    <title>Deposit</title>
+    <title>Withdrawal</title>
     <link rel="stylesheet" href="../assets/css/simple-line-icons.css">
     
     <link rel="stylesheet" href="../assets/user/font-awesome-4.7.0/css/font-awesome.min.css" />
@@ -179,11 +179,7 @@
                         <img src="../assets/user/image/icon/4.png" alt="Withdrawal">
                         <span class="menu-title">Withdrawal</span></a>
                 </li>
-                <li class="nav-item">
-                    <a href="transactions.html" class="nav-link">
-                        <img src="../assets/user/image/icon/5.png" alt="Transactions">
-                        <span class="menu-title">Transactions</span></a>
-                </li>
+                
                 <li class="nav-item">
                     <a href="#partners" class="nav-link">
                         <img src="../assets/user/image/icon/6.png" alt="Partners program">
@@ -193,6 +189,11 @@
                     <a href="#earnmoney" class="nav-link">
                         <img src="../assets/user/image/icon/7.png" alt="Earn money">
                         <span class="menu-title">Earn money</span></a>
+                </li>
+                <li class="nav-item">
+                    <a href="transactions.html" class="nav-link">
+                        <img src="../assets/user/image/icon/5.png" alt="Transactions">
+                        <span class="menu-title">Transactions</span></a>
                 </li>
                 <li class="nav-item">
                     <a href="#profile" class="nav-link">
