--- a/user/deposit.html
+++ b/user/deposit.html
@@ -181,7 +181,7 @@
                 </li>
                 
                 <li class="nav-item">
-                    <a href="#partners" class="nav-link">
+                    <a href="PartnersProgram.html" class="nav-link">
                         <img src="../assets/user/image/icon/6.png" alt="Partners program">
                         <span class="menu-title">Partners program</span></a>
                 </li>
