--- a/user/investment.html
+++ b/user/investment.html
@@ -181,7 +181,7 @@
                 </li>
                 
                 <li class="nav-item">
-                    <a href="#partners" class="nav-link">
+                    <a href="PartnersProgram.html" class="nav-link">
                         <img src="../assets/user/image/icon/6.png" alt="Partners program">
                         <span class="menu-title">Partners program</span></a>
                 </li>
@@ -237,7 +237,7 @@
                         <div class="col-md-6">
                             <div class="_plan">
                                 <a href="javascript:void(0)" onclick="choose(2)" title="plan 2">
-                                    <img id="plan2" class="investment_img" src="../assets/user/image/plan/2.png" alt="" style="">
+                                    <img id="plan2" class="investment_img" src="../assets/user/image/plan/2.png" alt="" >
                                 </a>
                             </div>
                         </div>
