hoan thanh big bonus

--- a/user/bigbonus.html
+++ b/user/bigbonus.html
@@ -168,7 +168,7 @@
                         <span class="menu-title">Deposit</span></a>
                 </li>
 
-                <li class="nav-item active">
+                <li class="nav-item">
                     <a href="investment.html" class="nav-link">
                         <img src="../assets/user/image/icon/3.png" alt=Iinvestment">
                         <span class="menu-title">Invest</span></a>
@@ -185,7 +185,7 @@
                         <img src="../assets/user/image/icon/6.png" alt="Partners program">
                         <span class="menu-title">Partners program</span></a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item active">
                     <a href="bigbonus.html" class="nav-link">
                         <img src="../assets/user/image/icon/7.png" alt="Big Bonus">
                         <span class="menu-title">Big Bonus</span></a>
@@ -218,127 +218,56 @@
 <div class="content-wrapper">
     <div class="row">
         <div class="col-12 grid-margin">
-            <div class="card card-statistics">
-                <div class="card-body p-0">
-                    <h2 class="title_header" style="text-align: center;padding-top: 20px;border-bottom: 1px solid #fed883;">
-                        Investment<br>
-                        <span style="font-size: 13px;">
-                            Step #1 Choose investment plan
-                        </span>
-                    </h2>
-                    <div class="row">
-                        <div class="col-md-6">
-                            <div class="_plan">
-                                <a href="javascript:void(0)" onclick="choose(1)" title="plan 1">
-                                    <img id="plan1" class="investment_img" src="../assets/user/image/plan/1.png" alt="" style="border:none;">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="_plan">
-                                <a href="javascript:void(0)" onclick="choose(2)" title="plan 2">
-                                    <img id="plan2" class="investment_img" src="../assets/user/image/plan/2.png" alt="" >
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="_plan">
-                                <a href="javascript:void(0)" onclick="choose(3)" title="plan 3">
-                                    <img id="plan3" class="investment_img" src="../assets/user/image/plan/3.png" alt="" style="border:none;">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="_plan">
-                                <a href="javascript:void(0)" onclick="choose(4)" title="plan 4">
-                                    <img id="plan4" class="investment_img" src="../assets/user/image/plan/4.png" alt="" style="border:none;">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="_plan">
-                                <a href="javascript:void(0)" onclick="choose(5)" title="plan 5">
-                                    <img id="plan5" class="investment_img" src="../assets/user/image/plan/5.png" alt="" style="border:none;">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="_plan">
-                                <a href="javascript:void(0)" onclick="choose(6)" title="plan 6">
-                                    <img id="plan6" class="investment_img" src="../assets/user/image/plan/6.png" alt="" style="border:none;">
-                                </a>
-                            </div>
-                        </div>
+            <h2 class="title_header" style="text-align: center;padding-top: 20px;border-bottom: 1px solid #fed883;">
+                Big Bonus
+            </h2>
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="_plan">
+                        <a href="javascript:void(0)" onclick="choose(1)" title="plan 1">
+                            <img id="plan1" class="investment_img" src="../assets/user/image/bigbonus/1.png" alt="" style="border:none;">
+                        </a>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="_plan">
+                        <a href="javascript:void(0)" onclick="choose(2)" title="plan 2">
+                            <img id="plan2" class="investment_img" src="../assets/user/image/bigbonus/2.png" alt="" >
+                        </a>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="_plan">
+                        <a href="javascript:void(0)" onclick="choose(3)" title="plan 3">
+                            <img id="plan3" class="investment_img" src="../assets/user/image/bigbonus/3.png" alt="" style="border:none;">
+                        </a>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="_plan">
+                        <a href="javascript:void(0)" onclick="choose(4)" title="plan 4">
+                            <img id="plan4" class="investment_img" src="../assets/user/image/bigbonus/4.png" alt="" style="border:none;">
+                        </a>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="_plan">
+                        <a href="javascript:void(0)" onclick="choose(5)" title="plan 5">
+                            <img id="plan5" class="investment_img" src="../assets/user/image/bigbonus/5.png" alt="" style="border:none;">
+                        </a>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="_plan">
+                        <a href="javascript:void(0)" onclick="choose(6)" title="plan 6">
+                            <img id="plan6" class="investment_img" src="../assets/user/image/bigbonus/6.png" alt="" style="border:none;">
+                        </a>
                     </div>
                 </div>
             </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-12 grid-margin">
-            <div class="card card-statistics">
-                <div class="card-body p-0">
-                    <h2 class="title_header" style="padding-left: 20px;padding-top: 22px; font-size: 23px;">
-                        Step #2
-                    </h2>
-                    <div class="row">
-                        <div class="col-md-6">
-                            <div class="your_partners" style="padding: 0px;">
-                                <div class="box_balance shadown">
-                                    Your blance: 
-                                </div>
-                                <div class="box_balance shadown">
-                                    Daily profit: 
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="your_partners" style="padding: 0px;">
-                                <div class="box_balance shadown">
-                                    Amount to invest:
-                                </div>
-                                <div class="box_balance shadown">
-                                    Start date:
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-12" style="margin-bottom:20px;padding-right: 15px;">
-                            <div class="btn-active">
-                                <a href="#" class="btn btn-primary btn-rounded btn-fw">investment now <i class="ti-arrow-right"></i></a>
-                                <a href="#" class="btn btn-info" style="background: #9E9E9E;border-color: #9E9E9E;">Cancel</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="col-md-12">
-            <div class="card">
-                <div class="card-body">
-                    <h4 class="card-title">Investments history</h4>
-                    <div class="row">
-                        <div class="table-responsive">
-                            <table id="order-listing" class="table">
-                                <thead>
-                                <tr>
-                                    <th>ID #</th>
-                                    <th>Start</th>
-                                    <th>Finish</th>
-                                    <th>Note</th>
-                                    <th>Amount</th>
-                                    <th>Status</th>
-                                </tr>
-                                </thead>
-                                <tbody>
-                                </tbody>
-                            </table>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            <p style="text-align:center; font-size:18px; padding: 10px;">
+                If you complete one of the items above, please us know by ticking Done and confirming the system wil check and send you the corresponding bonus.
+            </p>
         </div>
     </div>
 </div>
@@ -363,6 +292,10 @@
     function showLoading() {
         var mdl = "#md-loading";
         $(mdl).show();
+    }
+    var plans = document.getElementsByClassName("investment_img");
+    for(var i=0;i < plans.length;i++){
+        plans[i].style.border="none";
     }
 </script>
 </body>
