--- a/user/transactions.html
+++ b/user/transactions.html
@@ -186,9 +186,9 @@
                         <span class="menu-title">Partners program</span></a>
                 </li>
                 <li class="nav-item">
-                    <a href="#earnmoney" class="nav-link">
-                        <img src="../assets/user/image/icon/7.png" alt="Earn money">
-                        <span class="menu-title">Earn money</span></a>
+                    <a href="bigbonus.html" class="nav-link">
+                        <img src="../assets/user/image/icon/7.png" alt="Big Bonus">
+                        <span class="menu-title">Big Bonus</span></a>
                 </li>
                 <li class="nav-item active">
                     <a href="transactions.html" class="nav-link">
