them option withdrawal

--- a/user/bigbonus.html
+++ b/user/bigbonus.html
@@ -224,42 +224,42 @@
             <div class="row">
                 <div class="col-md-6">
                     <div class="_plan">
-                        <a href="javascript:void(0)" onclick="choose(1)" title="plan 1">
+                        <a href="javascript:void(0)" onclick="choose(1)" title="bigbonus 1">
                             <img id="plan1" class="investment_img" src="../assets/user/image/bigbonus/1.png" alt="" style="border:none;">
                         </a>
                     </div>
                 </div>
                 <div class="col-md-6">
                     <div class="_plan">
-                        <a href="javascript:void(0)" onclick="choose(2)" title="plan 2">
+                        <a href="javascript:void(0)" onclick="choose(2)" title="bigbonus 2">
                             <img id="plan2" class="investment_img" src="../assets/user/image/bigbonus/2.png" alt="" >
                         </a>
                     </div>
                 </div>
                 <div class="col-md-6">
                     <div class="_plan">
-                        <a href="javascript:void(0)" onclick="choose(3)" title="plan 3">
+                        <a href="javascript:void(0)" onclick="choose(3)" title="bigbonus 3">
                             <img id="plan3" class="investment_img" src="../assets/user/image/bigbonus/3.png" alt="" style="border:none;">
                         </a>
                     </div>
                 </div>
                 <div class="col-md-6">
                     <div class="_plan">
-                        <a href="javascript:void(0)" onclick="choose(4)" title="plan 4">
+                        <a href="javascript:void(0)" onclick="choose(4)" title="bigbonus 4">
                             <img id="plan4" class="investment_img" src="../assets/user/image/bigbonus/4.png" alt="" style="border:none;">
                         </a>
                     </div>
                 </div>
                 <div class="col-md-6">
                     <div class="_plan">
-                        <a href="javascript:void(0)" onclick="choose(5)" title="plan 5">
+                        <a href="javascript:void(0)" onclick="choose(5)" title="bigbonus 5">
                             <img id="plan5" class="investment_img" src="../assets/user/image/bigbonus/5.png" alt="" style="border:none;">
                         </a>
                     </div>
                 </div>
                 <div class="col-md-6">
                     <div class="_plan">
-                        <a href="javascript:void(0)" onclick="choose(6)" title="plan 6">
+                        <a href="javascript:void(0)" onclick="choose(6)" title="bigbonus 6">
                             <img id="plan6" class="investment_img" src="../assets/user/image/bigbonus/6.png" alt="" style="border:none;">
                         </a>
                     </div>
