--- a/user/withdrawal.html
+++ b/user/withdrawal.html
@@ -300,6 +300,26 @@
                 <div class="card-body">
                     <h4 class="card-title">Transitions Lasted</h4>
                     <div class="row">
+                        <div class="col-sm-12 col-md-6">
+                            <div class="dataTables_length" id="order-listing_length">
+                                <form id="frmSearch" method="get">
+                                        Show<label>
+                                        <select name="transactions_type" class="form-control">
+                                            <option selected="" value="0">All transactions</option>
+                                            <option value="1">Deposit</option>
+                                            <option value="3">Withdrawal</option>
+                                            <option value="4">Income</option>
+                                            <option value="2">Invest</option>
+                                            <option value="5">Ref commission</option>
+                                            <option value="6">Send</option>
+                                            <option value="7">Received</option>
+                                        </select>
+                                    </label>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
                         <div class="table-responsive">
                             <table id="order-listing" class="table">
                                 <thead>
